# LCIM-BitTheorium

./: .gitignore  Full.h  PackedCellTester.ipynb  RafNotes.md  readme  readme.md
core/: CMakeLists.txt  DesignDocument.md  TestHelper.hpp  graph_test.cpp  main.cpp  tree_test_apc.cpp
core/TestFiles/: APC_pointer_test.cpp  Test_AtomicAdaptiveBackoff.hpp.cpp  apc_generic_task_test.cpp  first_apc_node_test.cpp  heap_ptr_prime_test.cpp  split_pointer_publish_check.cpp  test_AtomicDataSignalArray.cpp
core/TestFiles/compare_test/: prime_baseline.cpp  prime_baseline_10_threads
core/TestFiles/pytests/: apcsmoketest.py
core/bindings/: PackedCellCoreBindings.cpp
core/headers/: APCSegmentsCausalCordinator.hpp  APCSideHelper.hpp  AdaptivePackedCellContainer.hpp  AllocNW.hpp  AtomicAdaptiveBackoff.hpp  AtomicDataSignalArray.hpp  AtomicPCArray.hpp  BidirectionalAPCNode.hpp  BidirectionalNodeHelper.h  MasterClockConf.hpp  NodeInGraphView.h  PCSideHelper.hpp  PackedCell.hpp  PackedCellBranchPlugin.hpp  PackedCellContainerManager.hpp  PackedCellContainerMannager.hpp  PackedStRel.h
core/headers/AdaptivePackedCellContainer/: APCHelpers.hpp  AdaptivePackedCellContainer.hpp  AtomicAdaptiveBackoff.hpp  CausalSegmentController.hpp  Defination.h  MasterClockConf.hpp  PackedCell.hpp  PackedCellBranchPlugin.hpp  PackedStRel.h  PointerSymenticsAdaptivePackedCellContainer.hpp  SegmentIODefinition.hpp
core/headers/AdaptivePackedCellContainer/APCDataStructure/: APCDataStructure.hpp  APCHelpers.hpp
core/headers/AdaptivePackedCellContainer/APCHelpers/: APCHelpers.hpp  APCStaticsFirst.hpp
core/headers/AdaptivePackedCellContainer/APCSpikeController/: AtomicAdaptiveBackoff.hpp  MasterClockConf.hpp
core/headers/AdaptivePackedCellContainer/PackedCell/: CoreCellDefination.h  CoreCellDefination.hpp  CoreCellMetaLogicDefination.h  Defination.h  MetaAndLogicDefinationOfPackedCell.h  PackedStRel.h
core/src/: AdaptivePackedCellContainer.cpp  AtomicCimCore.cpp  NodeInGraphView.cpp  PackedCellBranchPlugin.cpp  PackedCellContainerManager.cpp  PointerSymenticsAdaptivePackedCellContainer.cpp
core/src/APCSegmentsCausalCordinator/: PrivateAPCSegmentsCausalCordinator.cpp
core/src/AdaptivePackedCellContainer/: MasterClockConf.cpp  PrivateAdaptivePackedCellContainer.cpp  PrivatePackedCellBranchPlugin.cpp  PrivateSegmentIODefinition.cpp  PublicAPCSegmentsCausalCordinator.cpp  PublicAdaptivePackedCellContainer.cpp  PublicCausalSegmentController.cpp  PublicPackedCellBranchPlugin.cpp  PublicSegmentIODefinition.cpp
